--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -71,7 +71,7 @@ p {
   width: 100%;
   padding: 14px;
   font-size: 16px;
-  background: #666;
+  background:#07700a;
   color: #fff;
   border: none;
   border-radius: 8px;
@@ -80,7 +80,7 @@ p {
 }
 
 .continue-btn:hover {
-  background: #444;
+  background: #0a9fe4;
 }
 
 .terms {
